[gd_scene load_steps=15 format=3 uid="uid://do3meh5lihe7m"]

[ext_resource type="Script" path="res://scripts/animals/animal.gd" id="1_iakfu"]
[ext_resource type="Texture2D" uid="uid://bcmm48w44nvxr" path="res://assets/shadow-spritesheet.png" id="2_i73m4"]
[ext_resource type="Texture2D" uid="uid://cujx4aw2yskfo" path="res://assets/animals/Fox Sprite Sheet.png" id="3_qifmw"]
[ext_resource type="PackedScene" uid="uid://cdgqieen0fywu" path="res://scenes/exclamation_mark.tscn" id="4_cynj3"]
[ext_resource type="PackedScene" uid="uid://boa04w86lhmls" path="res://components/target_detector.tscn" id="5_utela"]
[ext_resource type="PackedScene" uid="uid://bj1ylpkx2y1ff" path="res://components/soft_collision.tscn" id="6_uo0p6"]
[ext_resource type="PackedScene" uid="uid://c47fxqx1tpaxl" path="res://components/ai_component.tscn" id="7_8lbce"]
[ext_resource type="PackedScene" uid="uid://dxa78ih8w5531" path="res://components/movement_component.tscn" id="8_a566p"]
[ext_resource type="PackedScene" uid="uid://s4fh6g7sht2d" path="res://components/animation_component.tscn" id="9_5n5ht"]
[ext_resource type="AudioStream" uid="uid://bg6lrcsaql6c1" path="res://assets/animal_join.wav" id="10_r8v1q"]

[sub_resource type="Animation" id="Animation_rhpfh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0tkq5"]
resource_name = "idle"
length = 0.416675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_k01ec"]
resource_name = "run"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wh4xf"]
_data = {
"RESET": SubResource("Animation_rhpfh"),
"idle": SubResource("Animation_0tkq5"),
"run": SubResource("Animation_k01ec")
}

[node name="Fox" type="CharacterBody2D" node_paths=PackedStringArray("ai_component", "movement_component", "animation_component", "soft_collision")]
script = ExtResource("1_iakfu")
ai_component = NodePath("AiComponent")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
soft_collision = NodePath("SoftCollision")

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("2_i73m4")
vframes = 4
frame = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_qifmw")
offset = Vector2(0, -16)
hframes = 14
vframes = 7

[node name="ExclamationMark" parent="." node_paths=PackedStringArray("target_detector") instance=ExtResource("4_cynj3")]
target_detector = NodePath("../TargetDetector")

[node name="TargetDetector" parent="." instance=ExtResource("5_utela")]
collision_mask = 1

[node name="SoftCollision" parent="." instance=ExtResource("6_uo0p6")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wh4xf")
}
autoplay = "idle"

[node name="AiComponent" parent="." node_paths=PackedStringArray("target_detector", "exclamation_mark", "tame_sfx") instance=ExtResource("7_8lbce")]
target_detector = NodePath("../TargetDetector")
exclamation_mark = NodePath("../ExclamationMark")
tame_sfx = NodePath("../TameSFX")

[node name="MovementComponent" parent="." instance=ExtResource("8_a566p")]

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite", "anim_player") instance=ExtResource("9_5n5ht")]
sprite = NodePath("../Sprite2D")
anim_player = NodePath("../AnimationPlayer")

[node name="TameSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_r8v1q")
volume_db = 5.032
